some fairly small edits and rewrites. adding some references

--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -8,8 +8,8 @@ main-sequence stars.
 % period and color/temperature/mass does not remain constant over large
 % timescales, contradicting a long-held assumption that underlies many
 % gyrochronology relations.
-In this work we use the velocities of populations of K dwarfs to reveal the
-rotational evolution of these cool stars at old ages.
+We use the velocities of populations of K dwarfs to reveal the rotational
+evolution of these cool stars at old ages.
 We find that groups of stars, selected to be the same age using a
 gyrochronology relation calibrated to the Praesepe cluster, do {\it not} have
 the same velocity dispersion at all temperatures; cooler stars have greater
