--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -112,9 +112,8 @@ archivePrefix = {arXiv},
 @ARTICLE{stardate_paper,
        author = {{Angus}, R. and {Morton}, T., D. and {Foreman-Mackey}, D. and
                 {van Saders}, J. and {Curtis}, J., L. and {Kane}, S., R. and
-                {Bedell}, M. and {Kiman}, R. and {Hogg}, D. W. and {Brewer}, J.}
-        title = "{Towards precise stellar ages: combining isochrone fitting
-            with empirical gyrochronology}",
+                {Bedell}, M. and {Kiman}, R. and {Hogg}, D. W. and {Brewer}, J.},
+        title = "{Towards precise stellar ages: combining isochrone fitting with empirical gyrochronology}",
       journal = {\aj},
      keywords = {methods: data analysis, stars: evolution, stars: low-mass, stars: magnetic field, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -202,7 +201,7 @@ archivePrefix = "arXiv",
    author = {{Nordstr{\"o}m}, B. and {Mayor}, M. and {Andersen}, J. and {Holmberg}, J. and
 	{Pont}, F. and {J{\o}rgensen}, B.~R. and {Olsen}, E.~H. and
 	{Udry}, S. and {Mowlavi}, N.},
-    title = "{The Geneva-Copenhagen survey of the Solar neighbourhood. Ages, metallicities, and kinematic properties of {\tilde}14 000 F and G dwarfs}",
+    title = "{The Geneva-Copenhagen survey of the Solar neighbourhood. Ages, metallicities, and kinematic properties of 14 000 F and G dwarfs}",
   journal = {\aap},
    eprint = {astro-ph/0405198},
  keywords = {Galaxy: disk, Galaxy: solar neighbourhood, Galaxy: stellar content, Galaxy: kinematics and dynamics, Galaxy: evolution, stars: fundamental parameters},
