--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -58,7 +58,8 @@
 \newcommand{\sigmavb}{$\sigma_{v{\bf b}}$}
 \newcommand{\sigmavz}{$\sigma_{v{\bf z}}$}
 
-\newcommand{\tmin}{4000}
+\newcommand{\tmin}{3500}
+\newcommand{\tmax}{5500}
 
 % \newcommand{\nsim_stars}{841}
 
